--- a/web/prop_viz.html
+++ b/web/prop_viz.html
@@ -62,7 +62,8 @@
 
 		<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 
-		<script src="js/three.min.js"></script>
+		<!--<script src="js/three.min.js"></script>-->
+		<script src="//cdnjs.cloudflare.com/ajax/libs/three.js/r83/three.min.js"></script>
 		<script src="js/TrackballControls.js"></script>
 
 		<script src="https://d3js.org/d3.v2.min.js"></script>
@@ -148,7 +149,7 @@
 					function(texture) {
 						texture.flipY = false;
 						// clear any uv-mappings
-						singleGeometry.faceVertexUvs[0] = [];	
+						singleGeometry.faceVertexUvs[0] = [];
 						// for each painting
 						for (var i = 0;i < 32*32;i++) {
 							var left = (i % 32)/32.
@@ -166,11 +167,16 @@
 							singleGeometry.faceVertexUvs[0][(i*2) + 1] = [ coords[1], coords[2], coords[3] ];
 						}
 
-						var material = new THREE.MeshPhongMaterial( { map : texture});
-						//var material = new THREE.MeshBasicMaterial( {color: 0xffaa00} );
+						var mat_1 = new THREE.MeshBasicMaterial( { map : texture});
+						var mat_2 = new THREE.MeshBasicMaterial( {  });
+						var material = new THREE.MultiMaterial( [mat_1, mat_2] );
+
 						mesh = new THREE.Mesh(singleGeometry, material);
 						scene.add(mesh);
-					}
+					}/*,
+					function(xhr) {
+						$('#info').html( (xhr.loaded / xhr.total * 100) + '% loaded' );
+					}*/
 				);
 
 
@@ -313,6 +319,7 @@
 						$("#imageinfo").show();
 						$("#container").addClass("clickable");
 						currentIntersectFace = face_index;
+						getHighResImage(face_index);
 						singleGeometry.verticesNeedUpdate = true;
 					} else if (face_index != currentIntersectFace) {
 						// entering tile, leaving previous tile
@@ -320,12 +327,15 @@
 						for (var i = 0;i < 4;i++) singleGeometry.vertices[face_index+i].z = 1.0;
 						var metadata = collection[face_index/4];
 						$("#imageinfo").html("<p><strong>"+metadata.artist+", <em>"+metadata.title+"</em></strong>. "+metadata.yearstring+".</p>")
+						removeHighResImage(currentIntersectFace);
+						getHighResImage(face_index);
 						currentIntersectFace = face_index;
 						singleGeometry.verticesNeedUpdate = true;
 					}
 				} else if (currentIntersectFace != -1) {
 					// leaving tile
 					for (var i = 0;i < 4;i++) singleGeometry.vertices[currentIntersectFace+i].z = 0.0;
+					removeHighResImage(currentIntersectFace);
 					currentIntersectFace = -1;
 					$("#imageinfo").hide();
 					$("#container").removeClass("clickable");
@@ -336,6 +346,63 @@
 
 				renderer.render( scene, camera );
 
+			}
+
+			var highResImageIndex = -1;
+
+			function getHighResImage(index) {
+				var index_str = "" + collection[(index/4)]['sequence_id'];
+				var image_filename = "0000".substring(0, 4 - index_str.length) + index_str;
+				highResImageIndex = index;
+				var loader = new THREE.TextureLoader().load(
+					//'https://mm.dimu.org/image/'+collection[index]+'?dimension=400x400',
+					'/data/painting/images/'+image_filename+".jpg",
+					function (texture) {
+						if (highResImageIndex == index) {
+							// update texture
+							mesh.material.materials[1].map = texture;
+							mesh.material.materials[1].needsUpdate = true;
+							mesh.material.needsUpdate = true;
+							// change fragment map
+							var coords = [
+								new THREE.Vector2(0,1.),
+								new THREE.Vector2(0,0),
+								new THREE.Vector2(1.,0),
+								new THREE.Vector2(1.,1.),
+							];
+							// map each painting to geometry and position
+							mesh.geometry.faceVertexUvs[0][(index/4)*2] = [ coords[0], coords[1], coords[3] ];
+							mesh.geometry.faceVertexUvs[0][((index/4)*2) + 1] = [ coords[1], coords[2], coords[3] ];
+							mesh.geometry.faces[(index/4) * 2].materialIndex = 1;
+							mesh.geometry.faces[(index/4)*2 + 1].materialIndex = 1;
+							mesh.geometry.uvsNeedUpdate = true;
+							mesh.geometry.elementsNeedUpdate = true;
+							mesh.geometry.groupsNeedUpdate = true;
+						}
+					}
+				);
+			}
+
+			function removeHighResImage(index) {
+				highResImageIndex = -1;
+				var i = index/4;
+				var left = (i % 32)/32.
+				var upper = Math.floor(i / 32)/32.
+				var right = left + 1/32.
+				var lower = upper + 1/32.
+				var coords = [
+					new THREE.Vector2(left,upper),
+					new THREE.Vector2(left,lower),
+					new THREE.Vector2(right,lower),
+					new THREE.Vector2(right,upper),
+				];
+				mesh.geometry.faceVertexUvs[0][(index/4)*2] = [ coords[0], coords[1], coords[3] ];
+				mesh.geometry.faceVertexUvs[0][((index/4)*2) + 1] = [ coords[1], coords[2], coords[3] ];
+				mesh.geometry.faces[(index/4) * 2].materialIndex = 0;
+				mesh.geometry.faces[(index/4)*2 + 1].materialIndex = 0;
+				mesh.geometry.uvsNeedUpdate = true;
+				mesh.geometry.elementsNeedUpdate = true;
+				mesh.geometry.groupsNeedUpdate = true;
 			}
 
 			function onMouseWheel(event) {
