--- a/web/prop_viz.html
+++ b/web/prop_viz.html
@@ -63,8 +63,8 @@
 		<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 		<script src="//cdnjs.cloudflare.com/ajax/libs/three.js/r83/three.min.js"></script>
 		<script src="js/TrackballControls.js"></script>
-
-		<script src="https://d3js.org/d3.v2.min.js"></script>
+		
+		<script src="//cdnjs.cloudflare.com/ajax/libs/d3/4.4.3/d3.min.js"></script>
 		<script src="js/fisheye.js"></script>
 
 
