--- a/web/prop_viz.html
+++ b/web/prop_viz.html
@@ -63,7 +63,7 @@
 		<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 		<script src="//cdnjs.cloudflare.com/ajax/libs/three.js/r83/three.min.js"></script>
 		<script src="js/TrackballControls.js"></script>
-		
+
 		<script src="//cdnjs.cloudflare.com/ajax/libs/d3/4.4.3/d3.min.js"></script>
 		<script src="js/fisheye.js"></script>
 
@@ -191,7 +191,8 @@
 				controls.minDistance = 200;
 				controls.maxDistance = 2000;
 				controls.noRotate = true;
-				controls.noZoom = true;
+				//controls.noZoom = true;
+				controls.noMouseZoom = true;
 
 				//
 
