--- a/web/prop_viz.html
+++ b/web/prop_viz.html
@@ -67,6 +67,18 @@
 				cursor : pointer;
 			}
 
+			#message {
+				position : absolute;
+				margin : auto;
+				top : 0;
+				left : 0;
+				right : 0;
+				bottom : 0;
+				width : 300px;
+				height : 100px;
+				font-size : 24px;
+			}
+
 		</style>
 	</head>
 	<body>
@@ -74,6 +86,7 @@
 		<div id="container"></div>
 		<div id="info">propinquity demo</div>
 		<div id="imageinfo"></div>
+		<div id="message"><p>Please wait, loading images...</p></div>
 		<div id="uicontrols">
 			<img src="css/plus.svg" id="ui_zoom_in">
 			<img src="css/minus.svg" id="ui_zoom_out">
@@ -186,6 +199,8 @@
 
 						mesh = new THREE.Mesh(singleGeometry, material);
 						scene.add(mesh);
+
+						$("#message").hide();
 						animate();
 					}/*,
 					function(xhr) {
